--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint"
   },
@@ -19,6 +20,7 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.7",
     "next-sanity": "^11.6.5",
+    "next-sitemap": "^4.2.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1"
